syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.nm.order.management.proto_common";
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;


message VersionRequest {}

message VersionResponse {
  string version = 1;
}

service VersionService {
  rpc GetVersion (VersionRequest) returns (VersionResponse);
}